bin/testsuite/tests/compiler/src/errors/compiler1871.swg
#global testerror "Err0268"

public struct Compiler1871 {}

impl Compiler1871
{
}
